# crypto-agent-platform

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: agents.yaml  default.yaml  example.env
examples/: defi_scanner.py  whale_detection.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  market.py  onchain.py  orchestrator.py  research.py
src/tools/: __init__.py  base.py  blockchain.py  market.py  research.py
src/workflows/: __init__.py  defi_scanner.py  portfolio_tracker.py  whale_alert.py
tests/: __init__.py  test_agents.py  test_tools.py
