[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-agent-platform"
version = "0.1.0"
description = "Multi-agent AI platform for cryptocurrency research, on-chain analysis, and DeFi monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Crypto Agent Team" },
]
keywords = [
    "crypto",
    "blockchain",
    "ai",
    "agent",
    "defi",
    "on-chain",
    "whale",
    "portfolio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
extra = [
    "web3>=6.0",
    "solana>=0.34",
    "pandas>=2.2",
    "rich>=13.0",
]

[project.scripts]
crypto-agent = "src.main:main"

[project.urls]
Homepage = "https://github.com/crypto-agent-platform/crypto-agent-platform"
Documentation = "https://github.com/crypto-agent-platform/crypto-agent-platform#readme"
Repository = "https://github.com/crypto-agent-platform/crypto-agent-platform"
Issues = "https://github.com/crypto-agent-platform/crypto-agent-platform/issues"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = []
ignore_missing_imports = true
